--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
 <body>
     <header>
         <div class="row">
-            <a href="index.html" class="col-md-4 logo">
-
-            </a>
-            <div class="col-md-8"></div>
+            <a class="col-md-4 logo" href="index.html"></a>
+            <div class="col-md-8">
+                <div class="row bg-color-name-title">
+                    <div class="col heading">
+                        <h1 class="name">Jutta Helin</h1>
+                        <h2 class="title"> Aspiring Full Stack Developer</h2>
+                    </div>
+                </div>
+            </div>
         </div>
-
     </header>
     <section>
 
